--- a/backend/templates/vpp/dashboard.html
+++ b/backend/templates/vpp/dashboard.html
@@ -39,13 +39,14 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h2>Dashboard</h2>
-                <p>Welcome to the dashboard</p>
-            </div>
-        </div>
+    <div>
+
+        <!-- Member-->
+
+        <!-- Device-->
+
+        <!-- EnergyData-->
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
